[v3.2] Fix table overflow horizontal scroll + fix move to top btn position for mobile

--- a/css/navigation-section/back-to-top-btn.css
+++ b/css/navigation-section/back-to-top-btn.css
@@ -26,10 +26,10 @@
 @media(max-width: 700px) {
     #back-to-top-btn {
         font-size: 18px;
-        width: 35px;
-        height: 35px;
-        bottom: 10px; 
-        right: 10px; 
+        width: 45px;
+        height: 45px;
+        bottom: 26px; 
+        right: 26px; 
         background-color: #fff;
         color: #333;
     }
