--- a/css/servicii-section.css
+++ b/css/servicii-section.css
@@ -1,54 +1,61 @@
 .servicii {
-    padding: 35px;
-    display: grid;
-    align-items: center;
-    text-align: center;
-    max-width: 1500px;
-    margin: auto;
-    /* background-color: #99c68e; */
+  padding: 35px;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  max-width: 1500px;
+  margin: auto;
+  /* background-color: #99c68e; */
 }
 
 .servicii h2 {
-    padding: 40px;
+  padding: 40px;
+}
+
+.div-table {
+  overflow-x: scroll;
+  display: grid;
+  align-content: center;
+  /* align-items: center; */
 }
 
 .servicii-table {
-    font-family: 'Roboto', sans-serif;
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    min-width: 250px;
-    border-radius: 5px 5px 0 0;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  font-family: "Roboto", sans-serif;
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 250px;
+  border-radius: 20px 20px 0 0;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .servicii thead th {
-    background-color: #C9CAB5;
-    color: #ffffff;
-    text-align: center;
-    /* font-weight: bold; */
+  background-color: #c9cab5;
+  color: #ffffff;
+  text-align: center;
+  /* font-weight: bold; */
 }
 
 .servicii-table th,
 .servicii-table td {
-    padding: 12px 15px;
+  padding: 12px 15px;
 }
 
 .servicii-table tbody tr {
-    border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
 }
 
 .servicii-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
+  background-color: #f3f3f3;
 }
 
 .servicii-table tbody tr:last-of-type {
-    /* border-bottom: 2px solid #009879; */
-    border-bottom: 2px solid #C9CAB5;
+  /* border-bottom: 2px solid #009879; */
+  border-bottom: 2px solid #c9cab5;
 }
 
 .servicii-table tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
+  font-weight: bold;
+  color: #009879;
 }
